apps/default/firefly-iii/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly
  namespace: default
  labels:
    app: firefly
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: firefly
  template:
    metadata:
      labels:
        app: firefly
    spec:
      containers:
      - name: firefly
        image: jc5x/firefly-iii:version-5.4.6
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: firefly
        volumeMounts:
        - mountPath: "/var/www/html/firefly-iii/storage/upload"
          name: firefly-upload
        resources: {}
      volumes:
      - name: firefly-upload
        persistentVolumeClaim:
          claimName: nfs-pvc-firefly
