apps/default/firefly-iii/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: firefly
  namespace: default
  labels:
    app: firefly
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      name: firefly
  selector:
    app: firefly
