apps/default/firefly-iii/ingress.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:
    app: firefly
  name: firefly
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx-internal
spec:
  rules:
  - host: firefly.home-lab.io
    http:
      paths:
      - path: /
        backend:
          serviceName: firefly
          servicePort: 8080
